--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "node app.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
